Fix hero logo alignment on mobile

--- a/src/components/Logo-hero/logoHero.module.scss
+++ b/src/components/Logo-hero/logoHero.module.scss
@@ -83,7 +83,7 @@
   .logoGroup {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-end;
     padding-top: 50px;
     & > img {
       width: 252px;
